Fixed z-index on the sticky header

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -105,7 +105,7 @@ p {
     top: 0;
     left: 0;
     text-align: center;
-    z-index: 9999999;
+    z-index: 99999999999;
     box-shadow: 0 0 2px 1px rgba(0,0,0,.1);
     background: white;
     height: $header-height;
@@ -246,7 +246,7 @@ a.exchange-anchor {
   -webkit-transition: all 0.15s ease-in-out; /** Chrome & Safari **/
   -moz-transition: all 0.15s ease-in-out; /** Firefox **/
   -o-transition: all 0.15s ease-in-out; /** Opera **/
-  
+
   &:hover {
     box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.25);
   }
@@ -460,7 +460,7 @@ ul.pools-list b {
 
 .verge-contest-link {
   position: relative;
-  z-index: 99999999999;
+  z-index: 9999;
 }
 
 @import
